prospecthome/test_debug_fs2.txt
node.exe : FAIL src/infrastructure/storage/FileSystemPhotoStorage.spec.ts
No linha:1 caractere:1
+ & "C:\Program Files\nodejs/node.exe" "C:\Program Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (FAIL src/infras...Storage.spec 
   .ts:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
  ÔùÅ Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its 
dependencies use non-standard JavaScript syntax, or when Jest is not 
configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform 
your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     ÔÇó If you are trying to use ECMAScript Modules, see 
https://jestjs.io/docs/ecmascript-modules for how to enable it.
     ÔÇó If you are trying to use TypeScript, see 
https://jestjs.io/docs/getting-started#using-typescript
     ÔÇó To have some of your "node_modules" files transformed, you can 
specify a custom "transformIgnorePatterns" in your config.
     ÔÇó If you need a custom transformation specify a "transform" option 
in your config.
     ÔÇó If you simply want to mock your non-JS modules (e.g. binary 
assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the 
docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\jppad\OneDrive\├ürea de 
Trabalho\imov\prospecthome\node_modules\uuid\dist\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filen
ame,jest){export { default as MAX } from './max.js';
                                                                            
          ^^^^^^

    SyntaxError: Unexpected token 'export'

      3 | import * as FileSystem from "expo-file-system";
      4 | import "react-native-get-random-values";
    > 5 | import { v4 as uuidv4 } from "uuid";
        | ^
      6 |
      7 | export class FileSystemPhotoStorage implements IPhotoStorage {
      8 |   async savePhoto(localUri: string): Promise<PhotoPath> {

      at Runtime.createScriptFromCode 
(node_modules/jest-runtime/build/index.js:1505:14)
      at Object.require 
(src/infrastructure/storage/FileSystemPhotoStorage.ts:5:1)
      at Object.require 
(src/infrastructure/storage/FileSystemPhotoStorage.spec.ts:1:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.789 s
Ran all test suites matching 
/src\\infrastructure\\storage\\FileSystemPhotoStorage.spec.ts/i.
